# abdrust

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  LOCAL_TEMPLATE.md  Makefile  README.es.md  README.ja.md  README.md  README.zh.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  opencode.json  skills-lock.json
.github/workflows/: ci.yml
backend/app/: Cargo.toml
backend/app/src/: audio.rs  auth.rs  config.rs  dave.rs  error.rs  lib.rs  main.rs  presence.rs  state.rs  voice.rs  voice_engine.rs
backend/app/src/bot/: client.rs  commands.rs  handlers.rs  mod.rs
backend/app/src/http/: activity.rs  api.rs  mod.rs  router.rs  ws.rs
backend/app/src/voice/: gateway.rs  mod.rs  rtp.rs  session.rs  udp.rs
docs/: browser-tooling-playbook.md  dev-log.md  embedded-activity-landscape.md  performance-notes.md  review-checklist.md  security-and-multiguild.md  voice-stack-plan.md
docs/adr/: 001-voice-websocket-library.md
frontend/: .env.example  .gitignore  index.html  lighthouserc.cjs  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  dev.ts  discord.ts  ws.ts
frontend/tests/: a11y.spec.ts  app.spec.ts
scripts/: install-cloudflared.sh  run-tunnel.sh
