[package]
name = "abdrust"
version = "0.1.0"
edition = "2024"
default-run = "abdrust"

[lib]
name = "abdrust"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "json"] }
dotenvy = "0.15"
futures = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16"
davey = "0.1.2"
songbird = { git = "https://github.com/abokado0107/songbird-dave.git", branch = "davey", default-features = false, features = ["gateway", "driver", "receive", "twilight", "tws", "rustls"] }
uuid = { version = "1", features = ["v4"] }
