[package]
name = "abdrust"
version = "0.1.0"
edition = "2024"
default-run = "abdrust"

[lib]
name = "abdrust"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "json"] }
byteorder = "1"
davey = "0.1.3"
dotenvy = "0.15"
futures = "0.3"
http = "1"
opus = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-websockets = { version = "0.11", features = ["client", "fastrand", "sha1_smol", "simd", "rustls-native-roots"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
uuid = { version = "1", features = ["v4"] }
